<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fcfcfc">


    <Button
        android:id="@+id/percent"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_margin="@dimen/button_margin"
        android:layout_marginTop="300dp"
        android:backgroundTint="#f8f8f8"
        android:text="@string/percent"
        android:textColor="#569415"
        android:textSize="@dimen/Number_text_size"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toStartOf="@+id/division"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/hooks"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_dot"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="#f8f8f8"
        android:text="@string/dot"
        android:textColor="#000000"
        android:textSize="@dimen/Number_text_size"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_equally"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button0"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <Button
        android:id="@+id/multiplication"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="#f8f8f8"
        android:text="@string/multiplication"
        android:textColor="#569415"
        android:textSize="@dimen/Number_text_size"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toTopOf="@+id/button_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/division" />

    <Button
        android:id="@+id/button_minus"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="#f8f8f8"
        android:text="@string/minus"
        android:textColor="#569415"
        android:textSize="@dimen/Number_text_size"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toTopOf="@+id/button_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/multiplication" />

    <Button
        android:id="@+id/button3"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="#f8f8f8"
        android:text="@string/_3"
        android:textColor="#000000"
        android:textSize="@dimen/Number_text_size"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toStartOf="@+id/multiplication"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/percent" />

    <Button
        android:id="@+id/button0"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="#f8f8f8"
        android:text="@string/_0"
        android:textColor="#000000"
        android:textSize="@dimen/Number_text_size"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_dot"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_posOrNeg"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/button5"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="#f8f8f8"
        android:text="@string/_5"
        android:textColor="#000000"
        android:textSize="@dimen/Number_text_size"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button_posOrNeg"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="#f8f8f8"
        android:text="@string/posOrNeg"
        android:textColor="#000000"
        android:textSize="@dimen/Number_text_size"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button0"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button_equally"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="#68b31a"
        android:text="@string/equally"
        android:textColor="#f8f8f8"
        android:textSize="@dimen/Number_text_size"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_dot"
        app:layout_constraintTop_toBottomOf="@+id/button_plus" />

    <Button
        android:id="@+id/division"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_margin="@dimen/button_margin"
        android:layout_marginTop="24dp"
        android:backgroundTint="#f8f8f8"
        android:text="@string/division"
        android:textColor="#569415"
        android:textSize="@dimen/Number_text_size"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toTopOf="@+id/multiplication"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/percent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/hooks"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_margin="@dimen/button_margin"
        android:layout_marginTop="300dp"
        android:backgroundTint="#f8f8f8"
        android:text="@string/hooks"
        android:textColor="#569415"
        android:textSize="@dimen/Number_text_size"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/percent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cancel"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button9"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="#f8f8f8"
        android:text="@string/_9"
        android:textColor="#000000"
        android:textSize="@dimen/Number_text_size"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toTopOf="@+id/button_dot"
        app:layout_constraintEnd_toStartOf="@+id/button_plus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button6"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="#f8f8f8"
        android:text="@string/_6"
        android:textColor="#000000"
        android:textSize="@dimen/Number_text_size"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toStartOf="@+id/button_minus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button7"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="#f8f8f8"
        android:text="@string/_7"
        android:textColor="#000000"
        android:textSize="@dimen/Number_text_size"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toTopOf="@+id/button_posOrNeg"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button4"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="#f8f8f8"
        android:text="@string/_4"
        android:textColor="#000000"
        android:textSize="@dimen/Number_text_size"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button8"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="#f8f8f8"
        android:text="@string/_8"
        android:textColor="#000000"
        android:textSize="@dimen/Number_text_size"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button_plus"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="#f8f8f8"
        android:text="@string/plus"
        android:textColor="#569415"
        android:textSize="@dimen/Number_text_size"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toTopOf="@+id/button_equally"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@+id/button_minus" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="#f8f8f8"
        android:text="@string/cancel"
        android:textColor="#e26a52"
        android:textSize="@dimen/Number_text_size"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toStartOf="@+id/hooks"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button2"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="#f8f8f8"
        android:text="@string/_2"
        android:textColor="#000000"
        android:textSize="@dimen/Number_text_size"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/hooks" />

    <Button
        android:id="@+id/button1"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="#f8f8f8"
        android:text="@string/_1"
        android:textColor="#000000"
        android:textSize="@dimen/Number_text_size"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cancel" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="193dp"
        android:gravity="end|bottom"
        android:text="0"
        android:textSize="@dimen/number_result_size"
        app:layout_constraintBottom_toTopOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toTopOf="@+id/hooks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.368"
        app:srcCompat="@drawable/linenew" />


</androidx.constraintlayout.widget.ConstraintLayout>